# lab_4

./: CMakeLists.txt
src/: main.cpp
src/core/: ArraySequence.hpp  DynamicArray.hpp  Exceptions.hpp  MutableArraySequence.hpp  Optional.hpp  Pair.hpp  Sequence.hpp
src/gui/: generatordialog.cpp  generatordialog.h  generatordialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  value_provider.cpp  value_provider.hpp
src/lazy/: ConcatGenerator.hpp  DefaultGenerator.hpp  FactorialSequence.hpp  FibonacciSequence.hpp  IGenerator.hpp  Iterators.hpp  LazySequence.hpp  SkipGenerator.hpp
src/my/: my_array.hpp  my_distributions.hpp  my_function.hpp  my_random.hpp  my_shared_ptr.hpp
src/stream/: Deserializer.cpp  Deserializer.hpp  FileStream.cpp  FileStream.hpp  ReadOnlyStream.hpp  Stream.hpp
src/testdata/: Distribution.hpp  SequenceProperty.hpp  SmartTestDataGenerator.cpp  SmartTestDataGenerator.hpp
src/testdata/Generators/: CompositeGenerator.hpp  LinearTrendGenerator.hpp  PeriodicGenerator.hpp  RandomWalkGenerator.hpp
tests/: test_large_scale.cpp  test_lazy_sequence.cpp  test_predefined_data.cpp  test_smart_generator.cpp  test_stream.cpp
